--- a/style.css
+++ b/style.css
@@ -66,22 +66,99 @@ a:hover {
     cursor: default;
 }
 
-/* Second Menu */
+/* Hamburger Menu */
 
-#second-nav {
+/* Hide the hamburger navigation by default */
+#hamburger-nav {
     display: none;
 }
 
-.second-menu {
+/* Position the hamburger menu relative to its parent */
+.hamburger-menu {
     position: relative;
     display: inline-block;
 }
 
-.second-icon {
+/* Style the hamburger icon */
+.hamburger-icon {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: 24px;
     width: 30px;
     cursor: pointer;
+}
+
+/* Style the individual lines of the hamburger icon */
+.hamburger-icon span {
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    transition: all 0.3s ease-in-out;
+}
+
+/* Style the menu links */
+.menu-links {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: white;
+    width: fit-content;
+    max-height: 0;
+    overflow: hidden;
+    transition: all 0.3s ease-in-out;
+}
+/* Set the display of the links in the menu to block */
+.menu-links a {
+    display: block;
+    /* Set the padding of the links in the menu to 10px */
+    padding: 10px;
+    /* Set the text alignment of the links in the menu to center */
+    text-align: center;
+    /* Set the font size of the links in the menu to 1.5rem */
+    font-size: 1.5rem;
+    /* Set the color of the links in the menu to black */
+    color: black;
+    /* Set the text decoration of the links in the menu to none */
+    text-decoration: none;
+    /* Set the transition of the links in the menu to all 0.3s ease-in-out */
+    transition: all 0.3s ease-in-out;
+}
+/* Set the list style of the list items in the menu to none */
+.menu-links li {
+    list-style: none;
+}
+
+/* Set the max height of the menu to 300px when it is open */
+.menu-links.open {
+    max-height: 300px;
+}
+
+/* Set the transform of the first span in the hamburger icon to rotate 45deg and translate 10px 5px when the menu is open */
+.hamburger-icon.open span:first-child {
+    transform: rotate(45deg) translate(10px, 5px);
+}
+/* Set the opacity of the second span in the hamburger icon to 0 when the menu is open */
+.hamburger-icon.open span:nth-child(2) {
+    opacity: 0;
+}
+
+/* Set the transform of the last span in the hamburger icon to rotate -45deg and translate 10px -5px when the menu is open */
+.hamburger-icon.open span:last-child {
+    transform: rotate(-45deg) translate(10px, -5px);
+}
+
+/* Set the transform of the first span in the hamburger icon to none when the menu is not open */
+.hamburger-icon span:first-child {
+    transform: none;
+}
+
+/* Set the opacity of the first span in the hamburger icon to 1 when the menu is not open */
+.hamburger-icon span:first-child {
+    opacity: 1;
+}
+
+/* Set the transform of the first span in the hamburger icon to none when the menu is not open */
+.hamburger-icon span:first-child {
+    transform: none;
 }
